fix some spacing in the footer

--- a/src/components/UI/StickyFooter.module.scss
+++ b/src/components/UI/StickyFooter.module.scss
@@ -30,6 +30,10 @@
     .negativeTextColor {
         color: red;
     }
+
+    .marginLeft {
+        margin-left: 10px;
+    }
 }
 
 
